--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     environment:
       - MQTT_BROKER_ADDRESS=192.168.1.62
       - MQTT_BROKER_PORT=1883
-      - PICOVOICE_ACCESS_KEY=05nuxDRAVjboy6biLTuc/Sy+aHgxCEp00ZM7kDjnibTrXD0QVCbLhw==
+      - PICOVOICE_ACCESS_KEY=
     devices:
       - "/dev/snd:/dev/snd"
     privileged: true  # el contenedor tiene privilegios elevados
