--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ venv.bak/
 docker-compose.override.yml
 docker-compose.local.yml
 docker-compose.local.override.yml
-
+*.log
 # Miscellaneous
 .DS_Store
 *.log
